# Financial-Analytics-Data-Pipeline-with-Machine-Learning

./: .gitignore  README.md  Run_LLM_on_T4_or_higher_GPU_via_VLLM.ipynb  environment.yml  pyproject.toml
scripts/: refresh_dashboard.py  run_pipeline.py  train_models.py
sql/: schema.sql
src/financial_analytics_pipeline/: __init__.py  config.py  data_pipeline.py  database.py  experiments.py  orchestrator.py  visualization.py
src/financial_analytics_pipeline/models/: __init__.py  ensemble.py  metrics.py  supervised.py  unsupervised.py  utils.py
tests/: test_metrics.py  test_models.py
